<resources>
    <string name="app_name">MyBlog</string>
    <string name="user_list_activity_label">Users</string>

    <string name="please_login_message">Please Login</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="users_url">users/</string>
    <string name="base_url">https://dry-tor-1032.herokuapp.com/</string>
    <string name="list_of_users">list of users</string>
    <string name="user_profile_activity_label">User Profile</string>
    <string name="posts_button">Posts</string>
    <string name="posts_url">posts/</string>
    <string name="comments_url">comments/</string>
    <string name="login">Login</string>
    <string name="login_url">login/</string>
    <string name="login_verification_url">loginVerification/</string>
    <string name="authentication_error">Email or password incorrect</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="submit">Submit</string>
    <string name="sign_up_activity_label">Sign Up</string>
    <string name="post_view_activity_label">Post</string>
    <string name="posts_activity_label">Posts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_user">Delete User</string>
    <string name="create_post_button">New Post</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="new_comment">New Comment</string>
    <string name="comment">Comment</string>
    <string name="create_comment_button">Create Comment</string>
</resources>
