<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="25dp"
        android:text="@string/sign_up"
        />

    <LinearLayout
        android:id="@+id/sign_up_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_title"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:hint="@string/name"
            />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:hint="@string/email"
            />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="@string/password"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/submit_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_entry"
        android:layout_alignRight="@id/sign_up_entry"
        android:layout_marginTop="15dp"
        android:layout_marginRight="8dp"
        android:padding="3dp"
        android:background="@color/login_button"
        android:textSize="20dp"
        android:text="@string/submit"
        />

</RelativeLayout>