<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/please_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/please_login_message"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/please_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_password"
        android:layout_alignRight="@id/user_password"
        android:layout_marginTop="15dp"
        android:layout_marginRight="8dp"
        android:padding="3dp"
        android:background="@color/login_button"
        android:textSize="20sp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_password"
        android:layout_alignLeft="@id/user_password"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8dp"
        android:padding="3dp"
        android:background="@color/login_button"
        android:textSize="20sp"
        android:text="@string/sign_up"/>

</RelativeLayout>
